[gd_scene load_steps=3 format=3 uid="uid://cwj1d5gelkt46"]

[ext_resource type="Script" path="res://Scripts/lane_box.gd" id="1_ctpg1"]
[ext_resource type="PackedScene" uid="uid://dh4hdamerjb6p" path="res://scenes/ship.tscn" id="2_rpv17"]

[node name="LaneBox" type="Node2D"]
script = ExtResource("1_ctpg1")
ship = ExtResource("2_rpv17")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_right = 80.0
offset_bottom = 106.0
grow_horizontal = 2

[node name="Name" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_right = 53.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Ships" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = 21.0
offset_right = 70.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "
"

[node name="Level" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = 58.0
offset_right = 70.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "
"

[node name="Create" type="Button" parent="."]
offset_left = -74.0
offset_top = 23.0
offset_right = 72.0
offset_bottom = 95.0
text = "Create Route
"

[node name="AddShip" type="Button" parent="."]
visible = false
offset_left = -16.0
offset_top = 24.0
offset_right = 13.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 11
text = "Add"

[node name="Upgrade" type="Button" parent="."]
visible = false
offset_left = -15.0
offset_top = 57.0
offset_right = 14.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 11
text = "Upgrade"

[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="AddShip" to="." method="_on_add_ship_pressed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_upgrade_pressed"]
